src/components/landing-hero/landing-hero.css
@import "../../variables.css";
@import "../../mixins.css";

.landing-hero {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 4base;

    @mixin breakpoint-m {
        margin-top: 15base;
        flex-direction: row;
        align-items: flex-start;
    }
}

.landing-hero__image {
    /* Has fixed aspect ratio to prevent reflow on load */
    --hero-aspect-ratio: calc(358 / 432);

    position: relative;
    opacity: 0.9;
    width: 100vw;
    max-width: 130base;
    height: calc(100vw * var(--hero-aspect-ratio));
    max-height: calc(130base * var(--hero-aspect-ratio));

    @mixin breakpoint-m {
        width: 60%;
        height: auto;
        max-width: initial;
        max-height: initial;
    }

    /* Radial Gradient to mask edges */
    &::before {
        content: "";
        position: absolute;
        left: 0;
        right: 0;
        bottom: 0;
        top: 0;
        background-image: radial-gradient(
            rgba(var(--dark-grey), 0) 50%,
            var(--dark-grey)
        );
    }
}

.landing-hero__text {
    text-align: center;
    max-width: 100base;

    @mixin breakpoint-m {
        text-align: left;
        margin-top: 14base;
        width: 40%;
    }

    @mixin breakpoint-l {
        margin-top: 20base;
    }
}

